--- a/registrationp4.html
+++ b/registrationp4.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Fall Regestration</title>
   <link rel="stylesheet" href="css/styles.css">
-  <meta http-equiv="refresh" content="10; URL=https://www.pzo.info/kolbeh_farsi_registration/" />
+  <meta http-equiv="refresh" content="2; URL=https://www.pzo.info/kolbeh_farsi_registration/" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -17,13 +17,7 @@
   <h1 class="reg_header">Fall Registration</h1>
   <br>
   <br>
-  <h2 style="font-size: 2rem;">Sending you to part <span style="color: cornflowerblue">4</span>/4 in 10 seconds</h2>
-  <br>
-  <br>
-  <h4>Please remember to fill out this form and the next one with the same contacts!</h3>
-  <br>
-  <br>
-  <h4>Thank you!</h2>
+  <h2 style="font-size: 2rem;">Sending you to part <span style="color: cornflowerblue">4</span>/4...</h2>
   <br>
   <br>
 </html>
