--- a/registrationp2.html
+++ b/registrationp2.html
@@ -68,16 +68,16 @@
         </ul>
        </p>
       <br>
-      <img width="20rem" height="25rem;" src="down-arrow.png" alt="">
+      <img class="downarrows" width="20rem" height="25rem;" src="down-arrow.png" alt="">
       <input type="checkbox" id="accept" name="acceptterms" value="acceptterms">
       <label for="acceptterms"> I have read the above and accept the terms of this contract</label>
-      <img width="20rem" height="25rem;" src="down-arrow.png" alt="">
+      <img class="downarrows" width="20rem" height="25rem;" src="down-arrow.png" alt="">
     </div>
    
     <br>
     <br>
-    <a class="downarrows" style="margin-right: 1rem;" href="registrationp1.html" class="mycnuButton">Back</a>
-    <a class="downarrows" href="registrationp3.html" class="mycnuButton">Continue</a>
+    <a style="margin-right: 1rem;" href="registrationp1.html" class="mycnuButton">Back</a>
+    <a href="registrationp3.html" class="mycnuButton">Continue</a>
     <br>
     <br>
     </html>
