--- a/registrationp3.html
+++ b/registrationp3.html
@@ -48,11 +48,12 @@
   <br>
   <h5>Make sure to fill out this form and the next form using the same name and contacts!</h5>
   <br>
-  <br>
-  <div class="container" id="ff-compose"></div>    
-  
+  <br>  
+
+  <div class="container" id="ff-compose"></div>
   <script async defer src="https://formfacade.com/include/104694526609323856789/form/1FAIpQLSdJ7CH-AYdFRY-KBKuU8XvF2qn288ua7N9cpSIPd11y2laXGw/bootstrap.js?div=ff-compose"></script>
-  <h5 style="margin-bottom: 1rem;">Make sure to click "submit" before continuing!</h5>
+
+  <h5 style="margin-bottom: 1rem; color: red;">Make sure to click "submit" before continuing!</h5>
   <a style="margin-right: 1rem;" href="registrationp2.html" class="mycnuButton">Back</a>
   <!-- <a href="https://www.pzo.info/kolbeh_farsi_registration" class="mycnuButton">Continue</a> -->
   <a href="registrationp4.html" class="mycnuButton">Continue</a>
