--- a/registrationp2.html
+++ b/registrationp2.html
@@ -70,7 +70,7 @@
       <br>
       <img class="downarrows" width="20rem" height="25rem;" src="down-arrow.png" alt="">
       <input type="checkbox" id="accept" name="acceptterms" value="acceptterms">
-      <label for="acceptterms"> I have read the above and accept the terms of this contract</label>
+      <label style="padding: 0.5rem" for="acceptterms"> I have read the above and accept the terms of this contract</label>
       <img class="downarrows" width="20rem" height="25rem;" src="down-arrow.png" alt="">
     </div>
    
