--- a/registrationp2.html
+++ b/registrationp2.html
@@ -50,10 +50,10 @@
     <br>
 
     <h1 class="reg_header" style="margin-bottom: 1rem;">Fall Registration</h1>
-    <h3>Step <span style="color: cornflowerblue;">2</span>/4</h3>
+    <h3 class="step">Step <span style="color: cornflowerblue;">2</span>/4</h3>
     <br>
     <div>
-      <p class="">Greetings,
+      <p>Greetings,
         <br>
         The following include Kholbeh Bazi ba Farsi’s rules:
         <br>
