--- a/registrationp2.html
+++ b/registrationp2.html
@@ -59,18 +59,43 @@
         <br>
         <br>
         <ul class="center">
-          <li>Each student is required to notify their instructor before class in the case of absence.</li>
-          <li>Two unmentioned absences indicate withdrawal from class and the student will be dropped form the course.</li>
-          <li>Three absences with the awareness of the instructor are permitted.</li>
-          <li>All Kolbeh groups will communicate with the Telegram app, and each family is required to check the groups from time to time in order to be updated about the class activities. Instructors are not in charge of contacting families individually.</li>
-          <li>All videos and content are special to Kolbe. Please do not share the content without notifying the instructors or Kolbeh officials.</li>
-          <li>Students that participate in various programs such as plays, choirs, and end of course projects need to be aware of the fact that the recorded videos will be shared on Kolbeh’s website as well as other social media platforms (YouTube, Facebook, Instagram, etc)</li>
+          <li class="left">Each student is required to notify their instructor before class in the case of absence.</li>
+          <li class="left">Two unmentioned absences indicate withdrawal from class and the student will be dropped form the course.</li>
+          <li class="left">Three absences with the awareness of the instructor are permitted.</li>
+          <li class="left">All Kolbeh groups will communicate with the Telegram app, and each family is required to check the groups from time to time in order to be updated about the class activities. Instructors are not in charge of contacting families individually.</li>
+          <li class="left">All videos and content are special to Kolbe. Please do not share the content without notifying the instructors or Kolbeh officials.</li>
+          <li class="left">Students that participate in various programs such as plays, choirs, and end of course projects need to be aware of the fact that the recorded videos will be shared on Kolbeh’s website as well as other social media platforms (YouTube, Facebook, Instagram, etc)</li>
         </ul>
        </p>
       <br>
+      <p style="text-align: right; padding-right: 2rem;">
+        درود
+<br>
+قوانين و مقررات كلاسهاي كلبه بازي با فارسي:
+<br>
+<br>
+<ul class="right">
+  <li class="right">
+    ١- هر دانش آموز موظف مي باشد كه در صورت غيبت تا قبل از شروع كلاس، به آموزگار آگاهي دهد.
+  </li>
+  <li class="right">٢- دو جلسه غيبت بدون هماهنگي با آموزگار كلاس نشانه انصراف از كلاس مي باشد و از كلاس مربوطه حذف خواهد 
+    شد.
+  </li>
+<li class="right">٣- سه جلسه غيبت با آگاهي دادن به آموزگار پذيرفته خواهد شد.
+</li>
+<li class="right">٤- تمامي گروههاي كلبه بازي با فارسي در تلگرام فعاليت خواهند داشت پس هر خانواده براي پيگيري فعاليتهاي كلاس و آگاهي از آن حتما به صورت منظم تلگرام را چك كنند. آموزگار كلاس مسئوليتي در اين مورد نخواهد داشت.
+</li>
+<li class="right"> ٥- ويدئوها و مطالبي كه در گروه ها گذاشته مي شود مخصوص كلاسهاي كلبه بازي با فارسي مي باشد لطفا بدون آگاهي  آموزگار كلاس يا مسئولان برگزار كننده كلاسها انتشار ندهيد.
+</li>
+<li class="right">٦- دانش آموزاني كه در برنامه هاي مختلف شركت مي كنند آگاه باشند كه ويدئوهاي برنامه ها ( مانند نمايش، سرود، پروژه هاي پايان دوره) در وبسايت كلبه بازي با فارسي گذاشته خواهد شد و كلبه بازي با فارسي مي تواند آنها را در فضاي مجازي قرار دهد. ( مانند YouTube, Facebook, Instagram)
+</li>
+<br>
+</ul>
+
+      </p>
       <img class="downarrows" width="20rem" height="25rem;" src="down-arrow.png" alt="">
       <input type="checkbox" id="accept" name="acceptterms" value="acceptterms">
-      <label style="padding: 0.5rem" for="acceptterms"> I have read the above and accept the terms of this contract</label>
+      <label style="padding: 0.5rem;" for="acceptterms"> I have read the above and accept the terms of this contract</label>
       <img class="downarrows" width="20rem" height="25rem;" src="down-arrow.png" alt="">
     </div>
    
