--- a/registrationp3.html
+++ b/registrationp3.html
@@ -6,7 +6,7 @@
   <title>Farsi Class</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="description" content="free Farsi class ages 8-18">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <link rel="shortcut icon" href="photoshopedlogo808.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
@@ -56,12 +56,13 @@
   <br>
   <br>  
 
-  <div class="container" id="ff-compose"></div>
-  <script async defer src="https://formfacade.com/include/104694526609323856789/form/1FAIpQLSdJ7CH-AYdFRY-KBKuU8XvF2qn288ua7N9cpSIPd11y2laXGw/bootstrap.js?div=ff-compose"></script>
-
+  <div class="formregfix">
+    <div class="container" id="ff-compose"></div>
+    <script async defer src="https://formfacade.com/include/104694526609323856789/form/1FAIpQLSdJ7CH-AYdFRY-KBKuU8XvF2qn288ua7N9cpSIPd11y2laXGw/bootstrap.js?div=ff-compose"></script>  
+  </div>
+ 
   <h5 style="margin-bottom: 1rem; color: red;">Make sure to click "submit" before continuing!</h5>
   <a style="margin-right: 1rem;" href="registrationp2.html" class="mycnuButton">Back</a>
-  <!-- <a href="https://www.pzo.info/kolbeh_farsi_registration" class="mycnuButton">Continue</a> -->
   <a href="registrationp4.html" class="mycnuButton">Continue</a>
   <br>
   <br>
