--- a/registrationp4.html
+++ b/registrationp4.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Farsi Class</title>
   <link rel="stylesheet" href="css/styles.css">
+  <meta http-equiv="refresh" content="1; URL=https://www.pzo.info/kolbeh_farsi_registration"/>
   <meta name="description" content="free Farsi class ages 8-18">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="photoshopedlogo808.ico">
