--- a/edclasses.html
+++ b/edclasses.html
@@ -49,9 +49,9 @@
         <h1>Educational classes</h1>
         <br>
         <br>
-        <h2 style="margin: 1rem;">Farsi  class</h2>
+        <h2 style="margin: 1rem;">Farsi class with Khaleh Merdokht</h2>
         <div style="margin-left: 1.9rem">
-            <h4>discription</h3>
+            <img height="250rem" width="200rem" src="Merdokht_N.jpg" alt="">
         </div>
         <br>
         <h2 style="margin: 1rem;">Farsi class</h2>
