--- a/artclasses.html
+++ b/artclasses.html
@@ -51,17 +51,17 @@
         <br>
         <h2 style="margin: 1rem;">Painting class</h2>
         <div style="margin-left: 1.9rem">
-            <h4>discription</h3>
+          <img height="275rem" width="225rem" src="Goli.jpg" alt="">
         </div>
         <br>
         <h2 style="margin: 1rem;">Singing class</h2>
         <div style="margin-left: 1.9rem">
-            <h4>discription</h3>
+          <img height="250rem" width="325rem" src="Mr.Khosraviani.jpg" alt="">
         </div>
         <br>
         <h2 style="margin: 1rem;">Acting class</h2>
         <div style="margin-left: 1.9rem">
-            <h4>discription</h3>
+          <img height="250rem" width="200rem" src="Fariba S.jpg" alt="">
         </div>
         <br>
         <a style="margin: 1.5rem; font-size: 150%;" href="registrationp1.html" class="myregButton">Register now!</a>
