--- a/edclasses.html
+++ b/edclasses.html
@@ -49,19 +49,25 @@
         <h1>Educational classes</h1>
         <br>
         <br>
-        <h2 style="margin: 1rem;">Farsi class with Khaleh Merdokht</h2>
+        <h2 style="margin: 1rem;">Farsi class with <span style="color: #9f36ad">Merdokht Namiranian</span></h2>
         <div style="margin-left: 1.9rem">
             <img height="250rem" width="200rem" src="Merdokht_N.jpg" alt="">
         </div>
         <br>
-        <h2 style="margin: 1rem;">Farsi class</h2>
+        <h2 style="margin: 1rem;">Farsi class with <span style="color:blue"> Nahid Kiyani (Khaleh Niki)</span></h2>
         <div style="margin-left: 1.9rem">
-            <h4>discription</h3>
+          <img height="250rem" width="200rem" src="Nahid.jpg" alt="">
         </div>
         <br>
-        <h2 style="margin: 1rem;">Farsi class</h2>
+        <h2 style="margin: 1rem;">Farsi class with <span style="color: #AE00FB">Arezu Bahrami</span></h2>
         <div style="margin-left: 1.9rem">
-            <h4>discription</h3>
+          <img height="250rem" width="250rem" src="Arezu.jpg" alt="">
+        </div>
+        <h2 style="margin: 1rem;">Farsi class with <span style="color:orange">Saina Salamati</span> and <span style="color: navy;">Atousa Edalati</span></h2>
+        <div style="margin-left: 1.9rem">
+          <img height="250rem" width="215rem" src="Saina.jpg" alt="">
+          <img height="250rem" width="215rem" src="Autosa.jpg" alt="">
+
         </div>
         <br>
         <a style="margin: 1.5rem; font-size: 150%;" href="registrationp1.html" class="myregButton">Register now!</a>
