--- a/index.html
+++ b/index.html
@@ -84,13 +84,16 @@
               <div class="col-md-12">
                   <div class="row">
                     <div class="col-md-6"> 
-                      <a href="edclasses.html"><img class="circle" style="width: 29%;" src="farsi.png" alt=""></a>
+                      <a href="edclasses.html"><img class="circle" style="width: 33%;" src="edlogo.jpg" alt=""></a>
                       <br>
                       <a href="edclasses.html">Educational Classes</a>
+                      <br>
+                      <br>
+                      <br>
                     </div>
 
                       <div class="col-md-6"> 
-                        <a href="artclasses.html"><img class="circle" style="width: 33%; " src="img_car\stage.jpg" alt=""></a>
+                        <a href="artclasses.html"><img class="circle" style="width: 33%; " src="artclasseslogo.jpg" alt=""></a>
                         <br>
                         <a href="artclasses.html">Art Classes</a>
                       </div>
