--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
   <center>
     <div>
       <p style="padding-top: 3%; margin-bottom: -1.2rem; " class="des lime"> 
-        كلاسهاي كلبه بازي با فارسي به منظور ايجاد محيطي دوستانه و شاد براي كودكان و نوجوانان (۱۸-۳ ساله) به همراه بازي با زبان فارسي  در دورهای مختلف برگزار خواهد شد 
-زمان و شرایط  برگزاری کلاسهای پاییز بزودی اعلام خواهد شد. 
+        كلاسهاي كلبه بازي با فارسي به منظور ايجاد محيطي دوستانه و شاد براي كودكان و نوجوانان (۱۸-۳ ساله) به همراه بازي با زبان فارسي در دورهای مختلف برگزار خواهد شد       
         <br>
+        دوره پاييز از تاريخ ١٧ سپتامبر ٢٠٢١ (09/17/2021) تا ١٦ دسامبر  ٢٠٢١ (12/16/2021) خواهد بود. 
+         .تاريخ (11/22/2021) تا (11/28/2021) كلاسهاي كلبه برگزار نخواهد شد
         <div class="tr1 btn-group">
           <button style="color: blue;" type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             Translate
           </button>
           <ul style="background-color: cyan; padding: 0.8rem;" class="dropdown-menu">
-            <p class="class"> Join Kolbeh bazi ba Farsi<br> to improve kid's Farsi language
-              (for ages 3 - 18). </p>
+            <p class="class">Join Kolbeh bazi ba Farsi
+              to improve kid's Farsi language (for ages 3 - 18). Fall classes are from 09/17/2021 to 12/16/2021. 
+              We don’t have any classes on Thanksgiving week ( 11/22/2021 - 11/28/2021).</p>
           </ul>
         </div>
       </p>
