--- a/registrationp2.html
+++ b/registrationp2.html
@@ -94,8 +94,10 @@
 
       </p>
       <img class="downarrows" width="20rem" height="25rem;" src="down-arrow.png" alt="">
-      <input type="checkbox" id="accept" name="acceptterms" value="acceptterms">
+
+      <input type="checkbox" id="accept" name="acceptterms" value="acceptterms" disabled checked>
       <label style="padding: 0.5rem;" for="acceptterms"> I have read the above and accept the terms of this contract</label>
+
       <img class="downarrows" width="20rem" height="25rem;" src="down-arrow.png" alt="">
     </div>
    
