--- a/registrationp1.html
+++ b/registrationp1.html
@@ -55,5 +55,22 @@
     <iframe width="600" height="275" style="padding-top: 1rem;" src="https://www.youtube.com/embed/-Qhl7BSjGp0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
     <br>
-    <a href="registrationp2.html" class="mycnuButton">Continue</a>
-    </html>
+    <h5>You may continue after 30 seconds has passed!</h5>
+    <br>
+    <a href="registrationp2.html" id="some-button" class="mycnuButton">Continue</a>
+    <script>
+        document.getElementById("some-button").style.display = "none";
+
+        function showStuff() {
+            document.getElementById("some-button").style.display = "inline";
+        }
+
+        function myFunction() {
+            window.location = "project.html"
+        }
+
+        setTimeout(showStuff, 30000);
+    </script> 
+    <br>
+    <br>
+   </html>
