--- a/registrationp3.html
+++ b/registrationp3.html
@@ -56,17 +56,26 @@
   <br>
   <br>  
 
-  <div class="formregfix">
+  <!-- <div class="formregfix">
     <div class="container" id="ff-compose"></div>
     <script async defer src="https://formfacade.com/include/104694526609323856789/form/1FAIpQLSdJ7CH-AYdFRY-KBKuU8XvF2qn288ua7N9cpSIPd11y2laXGw/bootstrap.js?div=ff-compose"></script>  
-  </div>
+  </div> -->
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdJ7CH-AYdFRY-KBKuU8XvF2qn288ua7N9cpSIPd11y2laXGw/viewform?embedded=true" width="640" height="1719" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
  
   <h5 style="margin-bottom: 1rem; color: red;">Make sure to click "submit" before continuing!</h5>
-  <h5>You may continue after 30 seconds has passed!</h5>
+  <h5 id="msg-succes">You may continue after 30 seconds has passed <span style="color: orange">For testing, you may continue at any time. However, this message will still disapear after 30 seconds</span></h5>
+  <script>
+    setTimeout(function(){
+      var msg = document.getElementById("msg-succes");
+      msg.parentNode.removeChild(msg);
+    }, 30000);
+</script>
+  <br>
   <br>
   <a style="margin-right: 1rem;" href="registrationp2.html" class="mycnuButton">Back</a> 
   <a href="registrationp4.html" id="some-button" class="mycnuButton">Continue</a>
-    <script>
+  
+    <!-- <script>
         document.getElementById("some-button").style.display = "none";
 
         function showStuff() {
@@ -78,7 +87,7 @@
         }
 
         setTimeout(showStuff, 30000);
-    </script>
+    </script> -->
   <br>
   <br>
 </html>
