--- a/registrationp1.html
+++ b/registrationp1.html
@@ -55,7 +55,7 @@
     <iframe width="600" height="275" style="padding-top: 1rem;" src="https://www.youtube.com/embed/-Qhl7BSjGp0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
     <br>
-    <h5 id="msg-succes">You may continue after 30 seconds has passed! <span style="color: orange">For testing, you may continue at any time. However, this message will still disapear after 30 seconds</span></h5>
+    <h5 id="msg-succes">You may continue after 30 seconds has passed!</h5>
     <script>
       setTimeout(function(){
         var msg = document.getElementById("msg-succes");
