--- a/registrationp3.html
+++ b/registrationp3.html
@@ -56,7 +56,7 @@
   <h5>Make sure to fill out this form and the next form using the same name and contacts!</h5>
   <br>
   <br>  
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdJ7CH-AYdFRY-KBKuU8XvF2qn288ua7N9cpSIPd11y2laXGw/viewform?embedded=true" width="640" height="1719" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <iframe class="regformmf" src="https://docs.google.com/forms/d/e/1FAIpQLSdJ7CH-AYdFRY-KBKuU8XvF2qn288ua7N9cpSIPd11y2laXGw/viewform?embedded=true" width="640" height="1719" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   <h5 id="msg-succes">You may continue after you submit the form</h5>
   <br>
   <br>
