--- a/registrationp2.html
+++ b/registrationp2.html
@@ -113,7 +113,7 @@
     <br>
     <a style="margin-right: 1rem;" href="registrationp1.html" class="mycnuButton">Back</a>
     <a href="registrationp3.html" id="some-button" class="mycnuButton">Continue</a>
-    <!-- <script>
+    <script>
         document.getElementById("some-button").style.display = "none";
 
         function showStuff() {
@@ -125,7 +125,7 @@
         }
 
         setTimeout(showStuff, 10000);
-    </script> -->
+    </script>
     <br>
     <br>
     </html>
