--- a/registrationp3.html
+++ b/registrationp3.html
@@ -6,7 +6,6 @@
   <title>Farsi Class</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="description" content="free Farsi class ages 8-18">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <link rel="shortcut icon" href="photoshopedlogo808.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,14 +55,14 @@
   <h5>Make sure to fill out this form and the next form using the same name and contacts!</h5>
   <br>
   <br>  
-  <iframe class="regformmf" src="https://docs.google.com/forms/d/e/1FAIpQLSdJ7CH-AYdFRY-KBKuU8XvF2qn288ua7N9cpSIPd11y2laXGw/viewform?embedded=true" width="640" height="1719" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdJ7CH-AYdFRY-KBKuU8XvF2qn288ua7N9cpSIPd11y2laXGw/viewform?embedded=true" width="640" height="1719" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   <h5 id="msg-succes">You may continue after you submit the form</h5>
   <br>
   <br>
   <a href="registrationp2.html" class="mycnuButton">Back</a> 
   <a href="registrationp4.html" id="some-button" class="mycnuButton regbuttonpositioning">Continue</a>
 
-    <!-- <script>
+    <script>
         document.getElementById("some-button").style.display = "none";
 
         function showStuff() {
@@ -75,7 +74,7 @@
         }
 
         setTimeout(showStuff, 30000);
-    </script> -->
+    </script>
   <br>
   <br>
 </html>
