--- a/registrationp1.html
+++ b/registrationp1.html
@@ -64,7 +64,7 @@
   </script>
     <br>
     <a href="registrationp2.html" id="some-button" class="mycnuButton">Continue</a>
-    <script>
+    <!-- <script>
         document.getElementById("some-button").style.display = "none";
 
         function showStuff() {
@@ -76,7 +76,7 @@
         }
 
         setTimeout(showStuff, 30000);
-    </script> 
+    </script>  -->
     <br>
     <br>
    </html>
