--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
          .تاريخ (11/22/2021) تا (11/28/2021) كلاسهاي كلبه برگزار نخواهد شد
         <div class="tr1 btn-group">
           <button style="color: blue;" type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            Translate
+            English
           </button>
           <ul style="background-color: cyan; padding: 0.8rem;" class="dropdown-menu">
-            <p class="class">Join Kolbeh bazi ba Farsi
+            <p class="class container">Join Kolbeh bazi ba Farsi
               to improve kid's Farsi language (for ages 3 - 18). Fall classes are from 09/17/2021 to 12/16/2021. 
               We don’t have any classes on Thanksgiving week ( 11/22/2021 - 11/28/2021).</p>
           </ul>
@@ -293,17 +293,20 @@
     </div>
 
 
-    <section id="footer">
+    <section id="footer" style="background-color: #71c9ce;">
       <div class="lime cm-homepage">
         <br>
+
         <a style="color: #231E23;" class="contact">Contact Kolbeh Farsi
           <span">
             <a href="mailto:kolbeh.farsi@gmail.com" class="contact" style="margin-left: 9.2rem; ">
               <i class="fas fa-envelope-square"></i>
             </a>
           </span>
-        </a>   
+        </a>
+
         <br>
+
         <a style="color: #231E23;" class="power">Website created by RADIN KHOSRAVIANI
           <span">
             <a href="mailto:radin.msft@gmail.com" class="power">
@@ -311,8 +314,9 @@
             </a>
           </span>
         </a>
-        <!-- <a class="power" href="mailto:radin.msft@gmail.com ">Website created and maintaned by RADIN KHOSRAVIANI<span> </span><i class="fas fa-envelope-square"></i></a> -->
+        <br>
       </div>
+      <a style="color: crimson;" href="Termsandservice.html">Terms and Service/Class Rules</a>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
