--- a/Termsandservice.html
+++ b/Termsandservice.html
@@ -21,37 +21,42 @@
 
   <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #71c9ce;">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="wrs" class="reg navbar-brand wrs" href="registrationp1.html">Fall Registration</a>
     <div class="collapse navbar-collapse navbar-left green vn" id="navbarNav">
-      <ul class="navbar-nav">
+        <ul class="navbar-nav">
         <li class="nav-item active mbtn">
-          <a class="btn navlink btn-outline-primary" href="index.html">Home</a>
+            <a class="navlink btn btn-outline-primary" href="index.html">Home</a>
         </li>
         <li class="nav-item mbtn">
-          <a class="btn navlink btn-outline-primary" href="class_pictures.html">Class Pictures</a>
+            <a class="btn navlink btn-outline-primary" href="class_pictures">Class Pictures</a>
         </li>
+
         <li class="nav-item mbtn">
-          <div class="dropdown">
+            <div class="dropdown">
             <button class="btn navlink btn-outline-primary">2020-2021</button>
             <div class="dropdown-content">
-              <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
-              <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
-              <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
-              <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
+                <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
+                <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
+                <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
+                <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
             </div>
-          </div>
+            </div>
         </li>
-      </ul>
+        </ul>
     </div>
-  </nav>
+</nav>   
+
+<div class="d-none d-lg-block">
+  <input type="button" class="gobackbutton" value="Go back to registration" onclick="history.back()">
+</div>          
+
 
   <p class="classes">
     <div>
         <p>Greetings,
           <br>
-          The following includes Kholbeh Bazi ba Farsi’s rules that you have agreed to at registration:
+          The following includes Kholbeh Bazi ba Farsi’s rules that you have or will agree to at registration:
           <br>
           <br>
           <ul class="center">
@@ -88,7 +93,7 @@
   <br>
   </ul>
   
-   <span style="font-weight: bolder;">When you registered you agreed to these terms of service</span>
+   <span style="font-weight: bolder;">Thank you for following our rules</span>
   </p>
 
 </body>
