--- a/classes.html
+++ b/classes.html
@@ -21,57 +21,47 @@
 
   <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #71c9ce;">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="wrs" class="reg navbar-brand wrs" href="registrationp1.html">Fall Registration</a>
     <div class="collapse navbar-collapse navbar-left green vn" id="navbarNav">
-      <ul class="navbar-nav">
+        <ul class="navbar-nav">
         <li class="nav-item active mbtn">
-          <a class="btn navlink btn-outline-primary" href="index.html">Home</a>
+            <a class="navlink btn btn-outline-primary" href="index.html">Home</a>
         </li>
         <li class="nav-item mbtn">
-          <a class="btn navlink btn-outline-primary" href="class_pictures.html">Class Pictures</a>
+            <a class="btn navlink btn-outline-primary" href="class_pictures">Class Pictures</a>
         </li>
+
         <li class="nav-item mbtn">
-          <div class="dropdown">
+            <div class="dropdown">
             <button class="btn navlink btn-outline-primary">2020-2021</button>
             <div class="dropdown-content">
-              <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
-              <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
-              <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
-              <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
+                <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
+                <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
+                <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
+                <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
             </div>
-          </div>
+            </div>
         </li>
-      </ul>
+        </ul>
     </div>
-  </nav>
+</nav>   
 
   <p class="classes">
-    كلاسهاي پاييز ٢٠٢١ 
     <br>
-    ١-كلاس نقاشي خاله گلي ( سن ٤-٩ سال) سه شنبه ها ساعت ٤:٣٠-٥ پسين
+    سه شنبه ساعت ٤-٤:٣٠ پسين ( كارگاه  آموزشي كودكان ٣-٦ ساله)
    <br>
-    ٢- كلاس خاله نيكي ( سن ٣-٦ سال) پنجشنبه ها ساعت ٤-٥ پسين
+   سه شنبه ساعت ٥- ٦ پسين ( كلاس آموزش الفباي فارسي ب) 
    <br>
-    ٣- گروه سرود كيومرث يكشنبه ها ساعت ٥-٦ پسين
+   چهارشنبه ساعت  ٥ پسين (كلاس نقاشي)   
    <br>
-    ٤- كلاس گفتگو به زبان فارسي ساينا و آتوسا شنبه ها ساعت ١١-١٢
+   پنجشنبه ساعت ٥-٦ پسين( كلاس آموزش الفباي فارسي الف) 
    <br>
-    ٥- كلاس خاله مهردخت شنبه ها ١٢-١ پسين ( دانش آموزان كلاس توانايي خواندن و نوشتن به زبان فارسي را دارند)
+   آدينه ساعت ٤:٣٠-٥:٣٠  پسين( كلاس ايرانشناسي به زبان فارسي)  
    <br>
-    ٦- كلاس خاله مهردخت يكشنبه ها ٣-٤ پسين (دانش آموزان كلاس توانايي خواندن و نوشتن به زبان فارسي را دارند)
+   شنبه ساعت ١١-١٢ بامداد( كارگاه گفتگو به زبان فارسي)  
    <br>
-    ٧- كلاس آموزش الفباي فارسي (الف) خاله آرزو شنبه ها ٣-٤ پسين ( ٦ سال به بالا)
    <br>
-    ٨- كلاس آموزش الفباي فارسي (ب) خاله آرزو شنبه ها ٤-٥ پسين ( ٦ سال به بالا)
-   <br>
-    ٩- كلاس مشترك خاله آرزو و خاله مهردخت
-    يكشنبه ها ٤-٥ پسين ( دانش آموزاني كه با  الفباي فارسي آشنا مي باشند) 
-    <br>
-    ١٠- گروه نمايش از سه سال به بالا ( اين برنامه پروژه اي مي باشد و روز و ساعت خاصي ندارد)
-    <br>
-    <br>
    <span style="font-weight: bolder;"> شهريه ورودي به كلبه بازي با فارسي دوره پاييز ٢٠٢١ مبلغ ٤٠$ خواهد بود.
 ( با پرداخت اين شهريه شما در هر چند كلاس يا فعاليتي كه علاقه داريد مي توانيد نامنويسي كنيد)</span>
   </p>
