--- a/artclasses.html
+++ b/artclasses.html
@@ -18,33 +18,33 @@
 
 <body style="text-align: left;" class="body">
     
-  <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #71c9ce; text-align: center;">
+  <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #71c9ce;">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="wrs" class="reg navbar-brand wrs" href="registrationp1.html">Fall Registration</a>
     <div class="collapse navbar-collapse navbar-left green vn" id="navbarNav">
-      <ul class="navbar-nav">
+        <ul class="navbar-nav">
         <li class="nav-item active mbtn">
-          <a class="btn navlink btn-outline-primary" href="index.html">Home</a>
+            <a class="navlink btn btn-outline-primary" href="index.html">Home</a>
         </li>
         <li class="nav-item mbtn">
-          <a class="btn navlink btn-outline-primary" href="class_pictures.html">Class Pictures</a>
+            <a class="btn navlink btn-outline-primary" href="class_pictures">Class Pictures</a>
         </li>
+
         <li class="nav-item mbtn">
-          <div class="dropdown">
+            <div class="dropdown">
             <button class="btn navlink btn-outline-primary">2020-2021</button>
             <div class="dropdown-content">
-              <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
-              <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
-              <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
-              <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
+                <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
+                <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
+                <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
+                <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
             </div>
-          </div>
+            </div>
         </li>
-      </ul>
+        </ul>
     </div>
-  </nav>
+</nav>   
       
     <section style="padding-left: 1rem; margin: 1rem 0;">
         <h1>Art classes</h1>
@@ -68,7 +68,6 @@
           <img height="250rem" width="200rem" src="Fariba S.jpg" alt="">
         </div>
         <br>
-        <a style="margin: 1.5rem; font-size: 150%;" href="registrationp1.html" class="myregButton">Register now!</a>
     </section>
 </body>
 </html>
