--- a/index.html
+++ b/index.html
@@ -1,117 +1,191 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
-  <title>Farsi Class</title>
+  <title>Kolbeh Farsi</title>
+  <!-- CSS stylesheets -->
   <link rel="stylesheet" href="css/styles.css">
-  <meta name="description" content="free Farsi class ages 8-18">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css"
+    integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+  <!-- SEO optimization -->
+  <meta name=”robots” content="index, follow">
+  <meta name="keywords" content="Farsi, Kolbeh, Class">
+  <meta property="og:site_name" content="Kolbeh Farsi" />
+  <link rel="canonical" href="https://kolbehfarsi.com" />
+  <meta name="description"
+    content="Traditional Farsi Class with ages 8-18. We provide multiple farsi classes and other art classes such as painting, acting, and singing.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="photoshopedlogo808.ico">
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/3ab9722e6f.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <!-- Bootstrap JQUERY -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
 </head>
 
 <body class="body">
-
-  <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #71c9ce;">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <div class="d-none d-lg-block">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #71c9ce;">
+      <a class="wrs" class="reg navbar-brand wrs" href="registration.html">Spring Registration</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="wrs" class="reg navbar-brand wrs" href="registrationp1.html">Fall Registration</a>
-    <div class="collapse navbar-collapse navbar-left green vn" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active mbtn">
-          <a class="btn navlink btn-outline-primary" href="index.html">Home</a>
-        </li>
-        <li class="nav-item mbtn">
-          <a class="btn navlink btn-outline-primary" href="class_pictures.html">Class Pictures</a>
-        </li>
-        <li class="nav-item mbtn">
-          <div class="dropdown">
-            <button class="btn navlink btn-outline-primary">2020-2021</button>
-            <div class="dropdown-content">
-              <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
-              <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
-              <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
-              <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
+      </button>
+      <div class="collapse navbar-collapse navbar-left green vn" id="navbarNav">
+          <ul class="navbar-nav">
+          <li class="nav-item active mbtn">
+              <a class="navlink btn btn-outline-primary" href="index.html">Home</a>
+          </li>
+          <li class="nav-item mbtn">
+              <a class="btn navlink btn-outline-primary" href="class_pictures">Class Pictures</a>
+          </li>
+  
+          <li class="nav-item mbtn">
+              <div class="dropdown">
+              <button class="btn navlink btn-outline-primary">2020-2021<i class="bi bi-caret-down-fill"></i></button>
+              <div class="dropdown-content">
+                  <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
+                  <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
+                  <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
+                  <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
+              </div>
+              </div>
+          </li>
+          </ul>
+      </div>
+    </nav>
+  </div>   
+  <div class="d-block d-lg-none">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #71c9ce;">
+      <a class="wrs" class="reg navbar-brand wrs" href="registrationmobile.html">Spring Registration</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse navbar-left green vn" id="navbarNav">
+          <ul class="navbar-nav">
+          <li class="nav-item active mbtn">
+              <a class="navlink btn btn-outline-primary" href="index.html">Home</a>
+          </li>
+          <li class="nav-item mbtn">
+              <a class="btn navlink btn-outline-primary" href="class_pictures">Class Pictures</a>
+          </li>
+  
+          <li class="nav-item mbtn">
+              <div class="dropdown">
+              <button class="btn navlink btn-outline-primary">2020-2021</button>
+              <div class="dropdown-content">
+                  <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
+                  <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
+                  <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
+                  <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
+              </div>
+              </div>
+          </li>
+          </ul>
+      </div>
+    </nav>
+  </div>   
 
   <div class="#gifbg">
-    <h1 class="lime invidst glow" style="padding: 1.5% 0 1.5%;">به کلبه بازی با فارسی<br>خوش آمدید</h1>
+    <h1 class="lime invidst glow" style="padding: 1.5% 0;">Kolbeh Bazi Ba Farsi</h1>
+    <h1 class="lime invidst glow" style="padding: 0 1.5%;">به کلبه بازی با فارسی خوش آمدید</h2>
+    <br>
     <div class="beg_sent lime">
     </div>
-    <!-- <img class="img1" src="IMG_20200729_095657_499 (1).png" alt="alt"> -->
-    <img class="img1" src="photoshopedlogo707.png" alt="alt">
+    <img class="img1" src="photoshopedlogo707.png" alt="Kolbeh Farsi Ba Bazi Logo">
     <br>
   </div>
   <center>
     <div>
-      <p style="padding-top: 3%; margin-bottom: -1.2rem; " class="des lime"> 
-        كلاسهاي كلبه بازي با فارسي به منظور ايجاد محيطي دوستانه و شاد براي كودكان و نوجوانان (۱۸-۳ ساله) به همراه بازي با زبان فارسي در دورهای مختلف برگزار خواهد شد       
-        <br>
-        دوره پاييز از تاريخ ١٧ سپتامبر ٢٠٢١ (09/17/2021) تا ١٦ دسامبر  ٢٠٢١ (12/16/2021) خواهد بود. 
-         .تاريخ (11/22/2021) تا (11/28/2021) كلاسهاي كلبه برگزار نخواهد شد
-        <div class="tr1 btn-group">
-          <button style="color: blue;" type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            English
-          </button>
-          <ul style="background-color: cyan; padding: 0.8rem;" class="dropdown-menu">
-            <p class="class container">Join Kolbeh bazi ba Farsi
-              to improve kid's Farsi language (for ages 3 - 18). Fall classes are from 09/17/2021 to 12/16/2021. 
-              We don’t have any classes on Thanksgiving week ( 11/22/2021 - 11/28/2021).</p>
-          </ul>
-        </div>
+      <p style="padding-top: 3%; margin-bottom: -1.2rem; " class="des lime">
+        كلاسهاي كلبه بازي با فارسي به منظور ايجاد محيطي دوستانه و شاد براي كودكان و نوجوانان (۱۸-۳ ساله) به همراه بازي با زبان فارسي در دورهای مختلف برگزار خواهد شد  دوره بهار از تاريخ ٢٤ ژانويه(01/24/2022) تا ١٥ مي ٢٠٢٢ (05/15/2022) خواهد بود. .تاريخ (03/14/2022) تا (04/04/2022) كلاسهاي كلبه برگزار نخواهد شد
+      <div class="tr1 btn-group">
+        <button style="color: blue;" type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          English
+        </button>
+        <ul style="background-color: cyan; padding: 0.8rem;" class="dropdown-menu">
+          <p class="class container">Join Kolbeh bazi ba Farsi to improve kid's Farsi language (for ages 3 - 18). Spring classes are from 01/24/2022 to 05/15/2022. (We don’t have any classes from 03/14/2022 to 04/04/2022).</p>
+        </ul>
+      </div>
       </p>
-        <br>
-        <br>
-    </center>
+      <br>
+      <br>
+  </center>
 
-        <br>
-        <a href="classes.html" class="classname hvr-float-shadow">Class information</a>
-        <hr class="borderindex">
+  <br>
+  <a href="classes.html" class="classname hvr-float-shadow">Class information</a>
 
-        <div class="container">
+  <hr class="borderindex">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Namayesheh Nakhondeh</h3>
+            <br>
+            <iframe width="300" height="150" src="https://www.youtube.com/embed/Vzv7MYvhVPo"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+            <br>
+            <br>
+          </div>
+          <div class="col-md-6">
+            <h3>Jashneh Mehregan soroud</h3>
+            <br>
+            <iframe width="300" height="150" src="https://www.youtube.com/embed/C-mvvMhel1s"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr class="borderindex">
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Meet our teachers!</h3>
+          <br>
           <div class="row">
-              <div class="col-md-12">
-                  <div class="row">
-                    <div class="col-md-6"> 
-                      <a href="edclasses.html"><img class="circle" style="width: 33%;" src="edlogo.jpg" alt=""></a>
-                      <br>
-                      <a href="edclasses.html">Educational Classes</a>
-                      <br>
-                      <br>
-                      <br>
-                    </div>
+            <div class="col-md-6">
+              <a href="edclasses.html"><img class="circle" style="width: 48%;" src="edlogo.jpg" alt=""></a>
+              <br>
+              <a href="edclasses.html">Educational Classes</a>
+              <br>
+              <br>
+            </div>
 
-                      <div class="col-md-6"> 
-                        <a href="artclasses.html"><img class="circle" style="width: 33%; " src="artclasseslogo.jpg" alt=""></a>
-                        <br>
-                        <a href="artclasses.html">Art Classes</a>
-                      </div>
-                  </div>
-              </div>
+            <div class="col-md-6">
+              <a href="artclasses.html"><img class="circle" style="width: 45%; " src="artclasseslogo.jpg" alt=""></a>
+              <br>
+              <a href="artclasses.html">Art Classes</a>
+            </div>
           </div>
       </div>
-
-          <!-- <iframe width="400" height="250" src="https://www.youtube.com/embed/FEvYe2-2ZNU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </p>
     </div>
-    <iframe width="400" height="250" src="https://www.youtube.com/embed/mXwS4zWUOoI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-   
-    <hr class="borderindex">
- 
-    <div id="carouselExampleControls" class="carousel slide jk" data-ride="carousel" data-interval="2000" data-pause="hover" data-touch="true" data-keyboard="true">
+  </div>
+
+  <hr class="borderindex">
+
+
+  <div id="carouselExampleControls" class="carousel slide jk" data-ride="carousel" data-interval="3000"
+    data-pause="hover" data-touch="true" data-keyboard="true">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="grads" src="img_car/grad.jpg" class="d-block w-100" alt="...">
@@ -293,31 +367,35 @@
     </div>
 
 
-    <section id="footer" style="background-color: #71c9ce;">
-      <div class="lime cm-homepage">
+    <!-- <section id="footer" style="background-color: #71c9ce;"> -->
+    <section id="footer">
+      <div style="background-color: #71c9ce;" class="lime cm-homepage">
         <br>
-
-        <a style="color: #231E23;" class="contact">Contact Kolbeh Farsi
-          <span">
-            <a href="mailto:kolbeh.farsi@gmail.com" class="contact" style="margin-left: 9.2rem; ">
+        <a style="color: #231E23;" class="power">Contact Kolbeh Farsi
+          <span>
+            <a href="mailto:kolbeh.farsi@gmail.com" class="power" style="margin-left: 9.2rem; ">
               <i class="fas fa-envelope-square"></i>
             </a>
+            <a href="https://www.instagram.com/kolbeh_bazi_ba_farsi/"><i class="fab fa-instagram power"></i></a>
           </span>
         </a>
-
         <br>
-
         <a style="color: #231E23;" class="power">Website created by RADIN KHOSRAVIANI
-          <span">
+          <span>
             <a href="mailto:radin.msft@gmail.com" class="power">
               <i class="fas fa-envelope-square"></i>
             </a>
+            <a href="https://www.instagram.com/radin_khosraviani/"><i class="fab fa-instagram power"></i></a>
           </span>
         </a>
         <br>
+        <br>
       </div>
-      <a style="color: crimson;" href="Termsandservice.html">Terms and Service/Class Rules</a>
+      <a class="Termsandservicehover"  href="Termsandservice.html">Terms and Service/Class Rules</a>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
