--- a/registrationp1.html
+++ b/registrationp1.html
@@ -21,36 +21,37 @@
 
   <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #71c9ce;">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="wrs" class="reg navbar-brand wrs" href="registrationp1.html">Fall Registration</a>
     <div class="collapse navbar-collapse navbar-left green vn" id="navbarNav">
-      <ul class="navbar-nav">
+        <ul class="navbar-nav">
         <li class="nav-item active mbtn">
-          <a class="btn navlink btn-outline-primary" href="index.html">Home</a>
+            <a class="navlink btn btn-outline-primary" href="index.html">Home</a>
         </li>
         <li class="nav-item mbtn">
-          <a class="btn navlink btn-outline-primary" href="class_pictures.html">Class Pictures</a>
+            <a class="btn navlink btn-outline-primary" href="class_pictures">Class Pictures</a>
         </li>
+
         <li class="nav-item mbtn">
-          <div class="dropdown">
+            <div class="dropdown">
             <button class="btn navlink btn-outline-primary">2020-2021</button>
             <div class="dropdown-content">
-              <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
-              <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
-              <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
-              <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
+                <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
+                <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
+                <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
+                <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
             </div>
-          </div>
+            </div>
         </li>
-      </ul>
+        </ul>
     </div>
-  </nav>
+</nav>   
 
     <br>
 
     <h1 class="reg_header" style="margin-bottom: 1rem;">Fall Registration</h1>
     <h3>Step <span style="color: cornflowerblue;">1</span>/4</h3>
+    <progress value="25" max="100"></progress>
     <br>
     <iframe width="600" height="275" style="padding-top: 1rem;" src="https://www.youtube.com/embed/-Qhl7BSjGp0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
@@ -64,7 +65,7 @@
   </script>
     <br>
     <a href="registrationp2.html" id="some-button" class="mycnuButton">Continue</a>
-    <!-- <script>
+    <script>
         document.getElementById("some-button").style.display = "none";
 
         function showStuff() {
@@ -76,7 +77,7 @@
         }
 
         setTimeout(showStuff, 30000);
-    </script>  -->
+    </script> 
     <br>
     <br>
    </html>
