--- a/registrationp3.html
+++ b/registrationp3.html
@@ -21,54 +21,54 @@
 
   <nav class="navbar navbar-expand-lg navbar-light navbar-right" style="background-color: #71c9ce;">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="wrs" class="reg navbar-brand wrs" href="registrationp1.html">Fall Registration</a>
     <div class="collapse navbar-collapse navbar-left green vn" id="navbarNav">
-      <ul class="navbar-nav">
+        <ul class="navbar-nav">
         <li class="nav-item active mbtn">
-          <a class="btn navlink btn-outline-primary" href="index.html">Home</a>
+            <a class="navlink btn btn-outline-primary" href="index.html">Home</a>
         </li>
         <li class="nav-item mbtn">
-          <a class="btn navlink btn-outline-primary" href="class_pictures.html">Class Pictures</a>
+            <a class="btn navlink btn-outline-primary" href="class_pictures">Class Pictures</a>
         </li>
+
         <li class="nav-item mbtn">
-          <div class="dropdown">
+            <div class="dropdown">
             <button class="btn navlink btn-outline-primary">2020-2021</button>
             <div class="dropdown-content">
-              <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
-              <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
-              <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
-              <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
+                <a class="hvr-shrink" href="2020to2021_projects.html">Projects</a>
+                <a class="hvr-shrink" href="2020to2021_songs.html">Songs</a>
+                <a class="hvr-shrink" href="2020to2021_1st_anniv.html">1st year Anniversary</a>
+                <a class="hvr-shrink" href="2020to2021_reviews.html">Reviews</a>
             </div>
-          </div>
+            </div>
         </li>
-      </ul>
+        </ul>
     </div>
-  </nav>
+</nav>   
 
   <br>
 
   <h1 class="reg_header">Fall Registration</h1>
   <h3>Step <span style="color: cornflowerblue;">3</span>/4</h3>
+  <progress value="75" max="100"></progress>
   <br>
-  <h5>Make sure to fill out this form and the next form using the same name and contacts!</h5>
+  <h5>Go to the bottom of the page to Verify once you have submited the registration form.</h5>
   <br>
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdJ7CH-AYdFRY-KBKuU8XvF2qn288ua7N9cpSIPd11y2laXGw/viewform?embedded=true" width="640" height="1719" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-<br>  
+  <iframe class="regformmf" src="https://docs.google.com/forms/d/e/1FAIpQLSdJ7CH-AYdFRY-KBKuU8XvF2qn288ua7N9cpSIPd11y2laXGw/viewform?embedded=true" width="640" height="1719" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <div class="anotherresponse"></div>
+  <br>  
  <br>
  <!-- <p id='demo' style='display: none'><a href="registrationp4.html" id="demo" class="mycnuButton">Continue</a></p>      -->
  <button type='button' class="verifybutton" onclick="toggleText()">Verify</button>
   <br>
   <br>
-  <h5 id="msg-succes">You may continue after you Submit and Verify</h5>
+  <h5 id="msg-succes">You may continue to pay after you <span style="color: orange">Submit</span> the form and <span style="color: red">Verify</span></h5>
   <br>
   <br>
-  <p id='demo' style='display: none; width: 10%; margin: 0 auto;'><a href="registrationp4.html" class="mycnuButton">Continue</a></p>
+  <p id='demo' style='display: none; margin: 0 auto;'><a href="registrationp4.html" class="mycnuButton verifycontinue">Continue</a></p>
   <br>
   <a href="registrationp2.html" style="margin-right: 1rem;" class="mycnuButton">Back</a> 
-  <!-- <button type="submit" id="roll" class="btn btn-default">Roll Branch1 </button> 			 -->
-	<!-- <button type="submit" href="registrationp4.html" name="clicked" id="clicked" class="mycnuButton" onblur="validate()" disabled="true" href="registrationp4.html">Continue</button> -->
   <script>
     function toggleText() {
       var text = document.getElementById("demo");
