--- a/classes.html
+++ b/classes.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="css/styles.css">
-  <meta name="description" content="free Farsi class ages 8-18">
+  <meta name="description" content="Traditional Farsi Class with ages 3-18. We provide multiple farsi classes and other art classes such as painting, acting, and singing.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="photoshopedlogo808.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -48,20 +48,24 @@
 </nav>   
 
   <p class="classes">
-    <br>
-    سه شنبه ساعت ٤-٤:٣٠ پسين ( كارگاه  آموزشي كودكان ٣-٦ ساله)
-   <br>
-   سه شنبه ساعت ٥- ٦ پسين ( كلاس آموزش الفباي فارسي ب) 
-   <br>
-   چهارشنبه ساعت  ٥ پسين (كلاس نقاشي)   
-   <br>
-   پنجشنبه ساعت ٥-٦ پسين( كلاس آموزش الفباي فارسي الف) 
-   <br>
-   آدينه ساعت ٤:٣٠-٥:٣٠  پسين( كلاس ايرانشناسي به زبان فارسي)  
-   <br>
-   شنبه ساعت ١١-١٢ بامداد( كارگاه گفتگو به زبان فارسي)  
-   <br>
-   <br>
+    سه شنبه ساعت ٤-٤:٣٠ پسين 
+( كارگاه  آموزشي كودكان ٣-٦ ساله)
+<br><br>
+سه شنبه ساعت ٥- ٦ پسين 
+( كلاس آموزش الفباي فارسي ب)
+<br><br>
+چهارشنبه ساعت ٥-٥:٣٠ پسين 
+( كلاس نقاشي)
+<br><br>
+پنجشنبه ساعت ٥-٦ پسين
+( كلاس آموزش الفباي فارسي الف) 
+<br><br>
+آدينه ساعت ٤:٣٠-٥:٣٠  پسين
+( كلاس ايرانشناسي به زبان فارسي)
+<br><br>
+شنبه ساعت ١١-١٢ بامداد
+( كارگاه گفتگو به زبان فارسي)
+<br><br>
    <span style="font-weight: bolder;"> شهريه ورودي به كلبه بازي با فارسي دوره پاييز ٢٠٢١ مبلغ ٤٠$ خواهد بود.
 ( با پرداخت اين شهريه شما در هر چند كلاس يا فعاليتي كه علاقه داريد مي توانيد نامنويسي كنيد)</span>
   </p>
