--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <meta name="keywords" content="Farsi, Kolbeh, Class">
   <meta property="og:site_name" content="Kolbeh Farsi" />
   <link rel="canonical" href="https://kolbehfarsi.com" />
-  <meta name="description"
-    content="Traditional Farsi Class with ages 8-18. We provide multiple farsi classes and other art classes such as painting, acting, and singing.">
+  <meta name="description" content="Traditional Farsi Class with ages 3-18. We provide multiple farsi classes and other art classes such as painting, acting, and singing.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="photoshopedlogo808.ico">
+  <meta property="og:image" content="photoshopedlogo707.png">
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
@@ -100,7 +100,7 @@
     </nav>
   </div>   
   <div class="d-block d-lg-none">
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Spring registration now available!</button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Registration now available!</button>
   </div>
   <div class="#gifbg">
     <h1 class="lime invidst glow" style="padding: 1.5% 0;">Kolbeh Bazi Ba Farsi</h1>
