--- a/classes.html
+++ b/classes.html
@@ -46,29 +46,56 @@
         </ul>
     </div>
 </nav>   
-
+<div class="d-block d-md-none d-lg-none">
   <p class="classes">
-    سه شنبه ساعت ٤-٤:٣٠ پسين 
-( كارگاه  آموزشي كودكان ٣-٦ ساله)
+    سه شنبه ساعت ٤-٤:٣٠ پسين <br>
+(كارگاه  آموزشي كودكان ٣-٦ ساله)
 <br><br>
-سه شنبه ساعت ٥- ٦ پسين 
-( كلاس آموزش الفباي فارسي ب)
+سه شنبه ساعت ٥- ٦ پسين <br>
+(كلاس آموزش الفباي فارسي ب)
 <br><br>
-چهارشنبه ساعت ٥-٥:٣٠ پسين 
-( كلاس نقاشي)
+چهارشنبه ساعت ٥-٥:٣٠ پسين <br>
+(كلاس نقاشي)
 <br><br>
 پنجشنبه ساعت ٥-٦ پسين
-( كلاس آموزش الفباي فارسي الف) 
+<br>(كلاس آموزش الفباي فارسي الف) 
 <br><br>
 آدينه ساعت ٤:٣٠-٥:٣٠  پسين
-( كلاس ايرانشناسي به زبان فارسي)
+<br>(كلاس ايرانشناسي به زبان فارسي)
 <br><br>
 شنبه ساعت ١١-١٢ بامداد
-( كارگاه گفتگو به زبان فارسي)
+<br>(كارگاه گفتگو به زبان فارسي)
 <br><br>
    <span style="font-weight: bolder;"> شهريه ورودي به كلبه بازي با فارسي دوره پاييز ٢٠٢١ مبلغ ٤٠$ خواهد بود.
 ( با پرداخت اين شهريه شما در هر چند كلاس يا فعاليتي كه علاقه داريد مي توانيد نامنويسي كنيد)</span>
   </p>
+</div>
+
+<div class="d-none d-md-block d-lg-block">
+  <p class="classes">
+    سه شنبه ساعت ٤-٤:٣٠ پسين 
+(كارگاه  آموزشي كودكان ٣-٦ ساله)
+<br><br>
+سه شنبه ساعت ٥- ٦ پسين 
+(كلاس آموزش الفباي فارسي ب)
+<br><br>
+چهارشنبه ساعت ٥-٥:٣٠ پسين 
+(كلاس نقاشي)
+<br><br>
+پنجشنبه ساعت ٥-٦ پسين
+(كلاس آموزش الفباي فارسي الف) 
+<br><br>
+آدينه ساعت ٤:٣٠-٥:٣٠  پسين
+(كلاس ايرانشناسي به زبان فارسي)
+<br><br>
+شنبه ساعت ١١-١٢ بامداد
+(كارگاه گفتگو به زبان فارسي)
+<br><br>
+   <span style="font-weight: bolder;"> شهريه ورودي به كلبه بازي با فارسي دوره پاييز ٢٠٢١ مبلغ ٤٠$ خواهد بود.
+( با پرداخت اين شهريه شما در هر چند كلاس يا فعاليتي كه علاقه داريد مي توانيد نامنويسي كنيد)</span>
+  </p>
+</div>
+  
 
 </body>
 
